Fix/Improve AsyncAction and socket.lookup